More frontpage stylings + footer + fixed mobile overflow due to browsebar

--- a/external/style/newCustom.less
+++ b/external/style/newCustom.less
@@ -1,10 +1,13 @@
 /* All custom less-code here */
 //@import "eventsAndNews.less";
-
 @import url("http://keski-finna.fi/external/finna/style/newsAndEvents.less");
 
 html {
   font-size: 1em;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 h1 {
@@ -27,22 +30,27 @@ h4, h5, h6 {
   max-height: .85em;
 }
 
+
+// TAUSTAKUVAN MÄÄRITYKSET
+@media (min-width: @screen-md-min) {
+  .template-dir-search.template-name-home .search-form-container {
+    padding-top: 9em;
+    padding-bottom: 5em;
+  }
+}
+// Browsebar
 .browsebar .nav>li a i.fa {
   margin-right: 0.5em;
 }
 
-/* TAUSTAKUVAN MÄÄRITYKSET */
-.template-dir-search.template-name-home .search-form-container {
-  padding-top: 9em;
-  padding-bottom: 5em;
-}
-
-/* Browsebar marginaali */
+// Browsebar marginaali
 .browsebar nav.navbar .nav-wrapper {
-  margin-left: 0px;
+  margin-left: 0;
 }
 
-/*Sinisen palkin kavennus*/
+
+/*
+// Sinisen palkin kavennus > Nämä koodit rikkovat skaalautuvuuden mobiiliin > kommentoitu.
 .browsebar .navbar {
   min-height: 44px;
 }
@@ -53,11 +61,143 @@ h4, h5, h6 {
 .browsebar-title {
   line-height: 44px;
 }
+*/
 
 /* Front page content area can be wider than 9xx pixels. */
 .template-name-home .container-fluid .container {
   width: auto;
   max-width: 1400px;
+}
+// Spacings for front page sections
+.home-1 {
+  margin-top: 2em;
+}
+
+.home-1, .home-2, .home-3 {
+  margin-bottom: 2.5rem;
+}
+
+/* Footer stylings */
+footer {
+  font-size: 1.3em;
+  width: 100%;
+  padding-top: 2.2em;
+  padding-bottom: 2.73em!important;
+  margin-bottom: -40px!important;
+  position: static!important;
+  bottom: 0!important;
+  left: 0!important;
+  display: flex;
+  height: auto!important;
+  margin-top: 2em!important;
+  min-height: 40vmin; // TO DO: https://keski.finna-test.fi/beta/Feedback/Home has empty space after the footer in 1080 * 1920.
+}
+
+
+.footer-container {
+  margin-top: 1.6em;
+  width: 100%;
+  justify-content: space-between;
+  display: flex!important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer-links li {
+  float: left;
+  display: block;
+  margin: 0 22px;
+  padding: 9px 11px;
+  margin-bottom: 3px;
+  //border-left: solid 1px black;
+}
+
+.footer-links li a {
+  text-decoration: none;
+}
+
+.footer-links li:hover {
+  border-bottom: solid 2px @brand-secondary;
+  margin-bottom: 0;
+}
+
+footer .selected-nav {
+  margin-bottom: 3px!important;
+}
+
+
+footer .selected-nav:hover {
+  margin-bottom: 3px!important;
+}
+
+footer .selected-nav a:hover {
+  text-decoration: none;
+}
+
+.footer-logo-container {
+  margin-bottom: 1.85em;
+}
+
+.foot-logo-link {
+  margin: .5em 3em!important;
+}
+
+
+footer h5 {
+  font-size: 1.17em;
+  margin-bottom: .7em;
+  color: #f8fafd;
+}
+
+@media (max-width: @screen-sm-min) {
+  // Footer gradient should be able to fill 100% of mobile screen.
+  footer {
+    min-height: 100vh;
+  }
+
+  .footer-links {
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer-links li {
+    margin-bottom: 1rem!important;
+  }
+
+  li a[title="About VuFind"] {
+    padding-left: 20px!important;
+  }
+
+  footer li a {
+    line-height: 2em!important;
+  }
+
+  .footer-container li a {
+    width: auto
+  }
+
+  .footer-links .foot-logo-link {
+    width: 100%!important;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+  }
+
+  .footer-links .foot-logo-link:hover {
+    border-bottom: none;
+  }
+
+}
+
+// Main section should always be at least 60% of device height on higher resolutions.
+@media screen and ( min-height: 768px ) {
+  section[role=main] {
+    min-height: 60vmin!important;
+  }
 }
 
 // Hide keski text from each search result holdings
