--- a/external/style/newsAndEvents.less
+++ b/external/style/newsAndEvents.less
@@ -917,7 +917,7 @@
     max-width: 90%;
     align-self: flex-start;
     align-items: flex-start;
-    border-left: solid 3px @brand-secondary;
+    border-left: solid 5px @brand-secondary;
     margin-left: 1em;
     margin-bottom: 1em;
     margin-right: auto;
